--- a/app/src/main/res/layout/include_synopsis.xml
+++ b/app/src/main/res/layout/include_synopsis.xml
@@ -19,4 +19,16 @@
         android:visibility="gone"
         tools:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book."
         tools:visibility="visible" />
+
+    <TextView
+        android:id="@+id/tv_go_to_website"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="24dp"
+        android:background="?android:attr/selectableItemBackground"
+        android:fontFamily="sans-serif-light"
+        android:gravity="center_horizontal"
+        android:padding="8dp"
+        android:textColor="@color/main_light"
+        android:textSize="20sp" />
 </LinearLayout>
